

=== UPGRADING=====
We suggest to check out and hold close to the instructions, which can be found in our online manual:
https://manual.limesurvey.org/Upgrading_from_a_previous_version

Thank you to everyone who helped with this new release!


CHANGE LOG
------------------------------------------------------
Changes from 3.22.11 (build 200330) to 3.22.12 (build 200406) April 6, 2020
-Fixed issue #16074: Wrong survey url when directLogin from beforeRegister event (Marko Bischof)
-Fixed issue #16069: Deactivate survey using tokens in Postgres 12 shows error (Carsten Schmitz)
-Fixed issue #15987: Move surveys from group A to group B now shows correct message "success" when saving was successful (Patricia Stelling)


Changes from 3.22.10 (build 200323) to 3.22.11 (build 200330) March 30, 2020
-Fixed issue: Quota not working for array 10-point (Olle Harstedt)
-Fixed issue 16037: Trim entered e-mail addresses  (fkroener)
#Updated translation: Italian by lfanfoni
#Updated translation: Italian (Informal) by lfanfoni
#Updated translation: French (France) by c_schmitz, DenisChenu
#Updated translation: Finnish by Jmantysalo
#Updated translation: Croatian by rovinj
#Updated translation: Catalan by qualitatuvic


Changes from 3.22.9 (build 200317) to 3.22.10 (build 200323) March 23, 2020
-Fixed issue #15975: Sanitize lang parameter for public survey list to restricted languages (Carsten Schmitz)
-Fixed issue #15973: Invalid submitfailed received (Denis Chenu)
-Fixed issue #15968: Deleted user not being completely logged out (Carsten Schmitz)
#Updated translation: Tajik by Iskandar_r
#Updated translation: Swedish by Norfa97
#Updated translation: Spanish (Argentina) (Informal) by MeryKilicMeT19
#Updated translation: Portuguese (Portugal) by effgarces
#Updated translation: Portuguese (Brazil) by bedendo
#Updated translation: Kyrgyz by kmaksat
#Updated translation: Indonesian by Mazi
#Updated translation: Hungarian by c_schmitz, vargaaz
#Updated translation: German by eddylackmann