@@ -269,9 +269,9 @@ class ExpressionValidate extends Survey_Common_Action
         }
         // TODO : Find error in class name, style etc ....
         // need: templatereplace without any filter and find if there are error but $bHaveError=$LEM->em->HasErrors() is Private
+        templatereplace(viewHelper::filterScript($sExpression), $aReplacement, $aReData, $sDebugSource, false, null, array(), true);
         $oFilter = new CHtmlPurifier();
-        templatereplace($oFilter->purify(viewHelper::filterScript($sExpression)), $aReplacement, $aReData, $sDebugSource, false, null, array(), true);
 
-        return $LEM::GetLastPrettyPrintExpression();
+        return $oFilter->purify($LEM::GetLastPrettyPrintExpression());
     }
 }
