@@ -1404,7 +1404,7 @@ class ExpressionManager
                     $stringParts[] = CHtml::tag('span',array(
                         'title' => !empty( $messages) ? implode('; ', $messages) : null,
                         'class'=> 'em-var-string'
-                    ),"'".$token[0]."'");
+                    ),"'".CHtml::encode($token[0])."'");
                     break;
                 case 'SGQA':
                 case 'WORD':
@@ -1549,8 +1549,7 @@ class ExpressionManager
             }
         }
         if ($this->sid && Permission::model()->hasSurveyPermission($this->sid, 'surveycontent', 'update')) {
-            App()->getClientScript()->registerCssFile(Yii::app()->getConfig('publicstyleurl')."expressions.css");
-            App()->getClientScript()->registerScriptFile(Yii::app()->getConfig('adminscripts')."expression.js");
+            App()->getClientScript()->registerPackage('expressionscript');
         }
         $sClass = 'em-expression';
         $sClass .= ($bHaveError) ? " em-haveerror" : "";
